# language-quiz-generator

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
alembic/: env.py
alembic/versions/: 6003bece63a7_worker_jobs_picked_up_at_pending_.py  b32919fbbea3_initial_schema.py
app/: auth.py  config.py  db.py  joblog.py  main.py  models.py  prompts.py  seed.py  ui.py  worker.py
app/llm/: client.py  providers.py
app/services/: analysis.py  extraction.py  generation.py  grading.py  review.py  scheduler.py  storage.py  sweep.py
demo/: .env.example  BACKLOG.md  README.md  requirements.txt  run.sh
demo/app/: config.py  db.py  main.py  prompts.py  schema.sql  seed.py  store.py
demo/app/llm/: client.py  providers.py
demo/app/services/: chat.py  generation.py  grading.py  intake.py  profile.py  review.py
demo/static/: app.js  index.html  style.css
document/: design_choise.md  design_suggestions.md  features.md  interview_pitch_note.md  planning.md  progress.md  prompt_devlog.md
evals/golden/: ambiguity.jsonl  extraction.jsonl  grading.jsonl  input_check.jsonl  quiz_generation.jsonl
tests/: test_analysis.py  test_auth.py  test_db_url.py  test_extraction.py  test_llm_parse.py  test_llm_retry.py  test_quiz.py  test_scheduler.py  test_storage.py  test_sweep.py  test_ui.py  test_worker.py
